@@ -1719,7 +1719,7 @@ block|}
 catch|catch
 parameter_list|(
 name|InterruptedException
-name|ie
+name|ignored
 parameter_list|)
 block|{           }
 block|}
@@ -3671,12 +3671,8 @@ operator|.
 name|getLatestSnapshotId
 argument_list|()
 decl_stmt|;
-specifier|final
-name|INodeReference
-operator|.
-name|DstReference
-name|ref
-init|=
+name|toDst
+operator|=
 operator|new
 name|INodeReference
 operator|.
@@ -3691,10 +3687,6 @@ name|withCount
 argument_list|,
 name|dstSnapshotId
 argument_list|)
-decl_stmt|;
-name|toDst
-operator|=
-name|ref
 expr_stmt|;
 block|}
 name|added
@@ -3915,18 +3907,12 @@ block|{
 comment|// src must be in snapshot
 comment|// the withCount node will no longer be used thus no need to update
 comment|// its reference number here
-specifier|final
-name|INode
-name|originalChild
-init|=
+name|srcChild
+operator|=
 name|withCount
 operator|.
 name|getReferredINode
 argument_list|()
-decl_stmt|;
-name|srcChild
-operator|=
-name|originalChild
 expr_stmt|;
 name|srcChild
 operator|.
@@ -3948,10 +3934,8 @@ name|asReference
 argument_list|()
 argument_list|)
 expr_stmt|;
-specifier|final
-name|INodeReference
-name|originalRef
-init|=
+name|srcChild
+operator|=
 operator|new
 name|INodeReference
 operator|.
@@ -3963,10 +3947,6 @@ name|withCount
 argument_list|,
 name|srcRefDstSnapshot
 argument_list|)
-decl_stmt|;
-name|srcChild
-operator|=
-name|originalRef
 expr_stmt|;
 name|withCount
 operator|.
@@ -4107,10 +4087,9 @@ expr_stmt|;
 block|}
 block|}
 block|}
+specifier|final
 name|String
 name|error
-init|=
-literal|null
 decl_stmt|;
 specifier|final
 name|INodesInPath
@@ -5035,12 +5014,8 @@ operator|.
 name|getLatestSnapshotId
 argument_list|()
 decl_stmt|;
-specifier|final
-name|INodeReference
-operator|.
-name|DstReference
-name|ref
-init|=
+name|toDst
+operator|=
 operator|new
 name|INodeReference
 operator|.
@@ -5061,10 +5036,6 @@ name|withCount
 argument_list|,
 name|dstSnapshotId
 argument_list|)
-decl_stmt|;
-name|toDst
-operator|=
-name|ref
 expr_stmt|;
 block|}
 comment|// add src as dst to complete rename
@@ -5386,18 +5357,12 @@ block|{
 comment|// src must be in snapshot
 comment|// the withCount node will no longer be used thus no need to update
 comment|// its reference number here
-specifier|final
-name|INode
-name|originalChild
-init|=
+name|srcChild
+operator|=
 name|withCount
 operator|.
 name|getReferredINode
 argument_list|()
-decl_stmt|;
-name|srcChild
-operator|=
-name|originalChild
 expr_stmt|;
 name|srcChild
 operator|.
@@ -5419,10 +5384,8 @@ name|asReference
 argument_list|()
 argument_list|)
 expr_stmt|;
-specifier|final
-name|INodeReference
-name|originalRef
-init|=
+name|srcChild
+operator|=
 operator|new
 name|INodeReference
 operator|.
@@ -5434,10 +5397,6 @@ name|withCount
 argument_list|,
 name|srcRefDstSnapshot
 argument_list|)
-decl_stmt|;
-name|srcChild
-operator|=
-name|originalRef
 expr_stmt|;
 name|withCount
 operator|.
@@ -5933,74 +5892,6 @@ argument_list|)
 operator|.
 name|getPreferredBlockSize
 argument_list|()
-return|;
-block|}
-finally|finally
-block|{
-name|readUnlock
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-DECL|method|exists (String src)
-name|boolean
-name|exists
-parameter_list|(
-name|String
-name|src
-parameter_list|)
-throws|throws
-name|UnresolvedLinkException
-block|{
-name|src
-operator|=
-name|normalizePath
-argument_list|(
-name|src
-argument_list|)
-expr_stmt|;
-name|readLock
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-name|INode
-name|inode
-init|=
-name|getNode
-argument_list|(
-name|src
-argument_list|,
-literal|false
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|inode
-operator|==
-literal|null
-condition|)
-block|{
-return|return
-literal|false
-return|;
-block|}
-return|return
-operator|!
-name|inode
-operator|.
-name|isFile
-argument_list|()
-operator|||
-name|inode
-operator|.
-name|asFile
-argument_list|()
-operator|.
-name|getBlocks
-argument_list|()
-operator|!=
-literal|null
 return|;
 block|}
 finally|finally
@@ -8475,65 +8366,6 @@ return|return
 literal|null
 return|;
 block|}
-comment|/**    * Get the blocks associated with the file.    */
-DECL|method|getFileBlocks (String src)
-name|Block
-index|[]
-name|getFileBlocks
-parameter_list|(
-name|String
-name|src
-parameter_list|)
-throws|throws
-name|UnresolvedLinkException
-block|{
-name|waitForReady
-argument_list|()
-expr_stmt|;
-name|readLock
-argument_list|()
-expr_stmt|;
-try|try
-block|{
-specifier|final
-name|INode
-name|i
-init|=
-name|getNode
-argument_list|(
-name|src
-argument_list|,
-literal|false
-argument_list|)
-decl_stmt|;
-return|return
-name|i
-operator|!=
-literal|null
-operator|&&
-name|i
-operator|.
-name|isFile
-argument_list|()
-condition|?
-name|i
-operator|.
-name|asFile
-argument_list|()
-operator|.
-name|getBlocks
-argument_list|()
-else|:
-literal|null
-return|;
-block|}
-finally|finally
-block|{
-name|readUnlock
-argument_list|()
-expr_stmt|;
-block|}
-block|}
 DECL|method|getExistingPathINodes (byte[][] components)
 name|INodesInPath
 name|getExistingPathINodes
@@ -8710,8 +8542,7 @@ argument_list|()
 expr_stmt|;
 try|try
 block|{
-if|if
-condition|(
+return|return
 name|srcs
 operator|.
 name|startsWith
@@ -8735,18 +8566,7 @@ literal|false
 argument_list|)
 operator|==
 literal|null
-condition|)
-block|{
-return|return
-literal|true
 return|;
-block|}
-else|else
-block|{
-return|return
-literal|false
-return|;
-block|}
 block|}
 finally|finally
 block|{
@@ -9837,7 +9657,10 @@ argument_list|(
 name|Path
 operator|.
 name|SEPARATOR
-operator|+
+argument_list|)
+operator|.
+name|append
+argument_list|(
 name|names
 index|[
 name|i
@@ -10415,9 +10238,8 @@ name|i
 init|=
 literal|0
 decl_stmt|;
-for|for
-control|(
-init|;
+while|while
+condition|(
 name|src
 index|[
 name|i
@@ -10427,11 +10249,12 @@ name|dst
 index|[
 name|i
 index|]
-condition|;
+condition|)
+block|{
 name|i
 operator|++
-control|)
-empty_stmt|;
+expr_stmt|;
+block|}
 comment|// src[i - 1] is the last common ancestor.
 specifier|final
 name|Quota
@@ -11175,8 +10998,6 @@ argument_list|()
 decl_stmt|;
 name|boolean
 name|added
-init|=
-literal|false
 decl_stmt|;
 try|try
 block|{
@@ -12835,10 +12656,9 @@ specifier|final
 name|boolean
 name|isUc
 init|=
+operator|!
 name|inSnapshot
-condition|?
-literal|false
-else|:
+operator|&&
 name|fileNode
 operator|.
 name|isUnderConstruction
@@ -14859,10 +14679,9 @@ literal|3
 index|]
 argument_list|)
 decl_stmt|;
+specifier|final
 name|long
 name|id
-init|=
-literal|0
 decl_stmt|;
 try|try
 block|{
